# desktop-dictate

./: .gitignore  README.md  index.html  package-lock.json  package.json
public/: overlay.html
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/soniox/: mod.rs
src-tauri/src/typer/: mod.rs
src/components/: Settings.tsx
