[package]
name = "desktop-dictate-app"
version = "0.1.0"
description = "Desktop dictation app with Soniox"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "desktop_dictate_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
cpal = "0.15"
hound = "3.5"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
enigo = { version = "0.6.1", features = ["x11rb"] }
arboard = "3"
